Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Assignment__c/Assignment__c.object-meta.xml
<CustomObject>
    <description>Represents a phishing training assignment given to an employee.</description>
    <label>Assignment</label>
    <nameField>
        <label>Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>