Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Assignment__c/fields/Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date__c</fullName>
    <label>Assigned Date</label>
    <type>Date</type>
</CustomField>