Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Assignment__c/fields/Training_Module__c.field-meta.xml
<CustomField>
    <fullName>Training_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Module</label>
    <referenceTo>Training_Module__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>