Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Assignment__c/recordTypes/Advanced_Training.recordType-meta.xml
<RecordType>
    <fullName>Advanced_Training</fullName>
    <active>true</active>
    <label>Advanced Training</label>
</RecordType>