Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Assignment__c/recordTypes/Basic_Training.recordType-meta.xml
<RecordType>
    <fullName>Basic_Training</fullName>
    <active>true</active>
    <label>Basic Training</label>
</RecordType>