Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Assignment__c/validationRules/Due_date_cannot_be_in_the_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_date_cannot_be_in_the_past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Due_Date__c)),
  Due_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>Due date cannot be in the past.</errorMessage>
</ValidationRule>