Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Assignment__c/validationRules/prevent_changing_Status_after_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_changing_Status_after_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(Status__c),
  ISPICKVAL(PRIORVALUE(Status__c), &quot;Completed&quot;)
)</errorConditionFormula>
    <errorMessage>A completed assignment cannot be modified.</errorMessage>
</ValidationRule>